--- a/JavaScript/method/正则表达式匹配全数字.md
+++ b/JavaScript/method/正则表达式匹配全数字.md
@@ -4,11 +4,12 @@
 
 # 正则表达式
 
-匹配全数字的正则表达式为：`^[0-9]+$`
+匹配全__数字的正则__表达式为：`^[0-9]+$`
 
 > The `^` will anchor the beginning of the string, the `$` will anchor the end of the string, and the `+` will match one or more of what precedes it (a number in this case). [Regex for numbers only](http://stackoverflow.com/questions/273141/regex-for-numbers-only)
 
 # 举个例子
+
 
 ```js
 var matchNumb = /^[0-9]+$/;
