添加对象属性

--- a/JavaScript/method/遍历对象属性.md
+++ b/JavaScript/method/遍历对象属性.md
@@ -52,3 +52,5 @@ for (let p in obj) {
 // 输出
 // "obj.color = red"
 ```
+
+参考资料：[MDN for...in](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/for...in) 
