优化后的冒泡排序

--- a/JavaScript/method/数组排序.md
+++ b/JavaScript/method/数组排序.md
@@ -3,7 +3,7 @@
 ### 冒泡排序
 
 ```js
-// 错误的排序
+// 错误的冒泡排序
 Array.prototype.bubbleSort = function () {
   var len = this.length;
   for (var i = 0; i < len - 1; i++) {
@@ -20,15 +20,15 @@ Array.prototype.bubbleSort = function () {
 上面代码的问题在于只比较相邻两项，并不能完整比较整个数组。比如，下面比较就会出错（自己思考下会返回什么）：   
 
 ```js
-[1, 6, 7, 9, 5, 4].bubbleSort()
+[5, 4, 3, 2, 1].bubbleSort()
 ```
 
 ```js
-// 正确的排序
+// 正确的冒泡排序
 Array.prototype.bubbleSort = function () {
   var len = this.length;
   for (var i = 0; i < len; i++) {
-    for (var j = 0; j < len - 1; j++) {
+    for (var j = 0; j < len - 1 - i; j++) {
       if (this[j] > this[j + 1]) {
         var tem = this[j];
         this[j] = this[j + 1];
@@ -40,6 +40,25 @@ Array.prototype.bubbleSort = function () {
 }
 ```
 
-这个排序的时间复杂度是`O(n^2)`，不推荐使用。
+这个排序的时间复杂度是`O(n^2)`，不推荐使用。   
 
+因为每次i循环后，最大的数已经到了最后，所以j再进行循环时不需要到`len - 1`，只要`len - 1 - i`就好    
 
+```js
+// 优化后的冒泡排序
+Array.prototype.bubbleSort = function () {
+  var len = this.length;
+  for (var i = 0; i < len; i++) {
+    for (var j = 0; j < len - 1 - i; j++) {
+      if (this[j] > this[j + 1]) {
+        var tem = this[j];
+        this[j] = this[j + 1];
+        this[j + 1] = tem;
+      }
+    }
+  }
+  return this;
+}
+```
+
+这个排序的时间复杂度是`O(n^2)`，尽管有优化，但不推荐使用。  
