优化之前冒泡排序

--- a/JavaScript/method/数组排序.md
+++ b/JavaScript/method/数组排序.md
@@ -28,7 +28,7 @@ Array.prototype.bubbleSort = function () {
 Array.prototype.bubbleSort = function () {
   var len = this.length;
   for (var i = 0; i < len; i++) {
-    for (var j = 0; j < len - 1 - i; j++) {
+    for (var j = 0; j < len - 1; j++) {
       if (this[j] > this[j + 1]) {
         var tem = this[j];
         this[j] = this[j + 1];
