添加快排算法

--- a/JavaScript/method/数组排序.md
+++ b/JavaScript/method/数组排序.md
@@ -42,13 +42,13 @@ Array.prototype.bubbleSort = function () {
 
 这个排序的时间复杂度是`O(n^2)`，不推荐使用。   
 
-因为每次i循环后，最大的数已经到了最后，所以j再进行循环时不需要到`len - 1`，只要`len - 1 - i`就好    
+因为每次i循环后，最大的数已经到了最后，所以j再进行循环时不需要到`len - 1`，只要`len - 1 - i`就好；同时，循环的时候`i`只需要循环`len - 1`次。    
 
 ```js
 // 优化后的冒泡排序
 Array.prototype.bubbleSort = function () {
   var len = this.length;
-  for (var i = 0; i < len; i++) {
+  for (var i = 0; i < len - 1; i++) {
     for (var j = 0; j < len - 1 - i; j++) {
       if (this[j] > this[j + 1]) {
         var tem = this[j];
@@ -61,4 +61,137 @@ Array.prototype.bubbleSort = function () {
 }
 ```
 
-这个排序的时间复杂度是`O(n^2)`，尽管有优化，但不推荐使用。  
+这个排序的时间复杂度是`O(n^2)`，优化有限，不推荐使用。  
+
+### 快速排序
+
+快速排序是目前应用最为广泛的排序法，主要思想是：
+
+- 1，取中间值；
+- 2，数组中剩余所有项和中间值比较，如果大于中间值，放在左侧，反之放在右侧；
+- 3，左侧和右侧的重复1,2步骤（通过递归函数实现），直到最后只剩下一个元素的数组，即比较完成；
+- 4，把所有拆分的数组拼接成完整数组。
+
+**错误1**
+
+```js
+// 错误的快排
+function quickSort (arr) {
+  // 设置递归函数结束条件：数组长度为1，结束递归
+  var len = arr.length;
+  if (len === 1) { // error1: 数组长度可能为0
+    return arr;
+  }
+
+  for (var i = 1; i < len; i++) {
+    var num = Math.floor(len / 2);
+
+    // 取中间值
+    var middleValue = arr.splice(num, 1)[0];
+
+    // 创建占位数组
+    var left = [], right = []; // error2:这样每次都置空了，应该在for循环外面！
+
+    // 与中间值比较，组合左右数组
+    if (arr[i] < middleValue) {
+      left.push(arr[i]);
+    } else {
+      right.push(arr[i]);
+    }
+
+    // 左右数组递归，拼接
+    return quickSort(left).concat(middleValue, quickSort(right)); // erro3:在for循环外面！
+  }
+}
+```
+
+**错误2**
+
+```js
+// 错误的快排
+function quickSort (arr) {
+  // 设置递归函数结束条件：数组长度为1，结束递归
+  var len = arr.length;
+  if (len <= 1) {
+    return arr;
+  }
+
+  var num = Math.floor(len / 2);
+
+  // 取中间值
+  var middleValue = arr.splice(num, 1)[0];
+
+  // 创建占位数组
+  var left = [], right = [];
+
+  for (var i = 0; i < len; i++) { // 经过splice操作，原数组长度减1
+    // 与中间值比较，组合左右数组
+    if (arr[i] < middleValue) {
+      left.push(arr[i]);
+    } else {
+      right.push(arr[i]);
+    }
+  }
+
+  // 左右数组递归，拼接
+  return quickSort(left).concat(middleValue, quickSort(right));
+}
+```
+
+**正确**
+
+```js
+// 错误的快排
+function quickSort (arr) {
+  // 设置递归函数结束条件：数组长度为1，结束递归
+  var len = arr.length;
+  if (len <= 1) {
+    return arr;
+  }
+
+  var num = Math.floor(len / 2);
+
+  // 取中间值
+  var middleValue = arr.splice(num, 1)[0];
+
+  // 创建占位数组
+  var left = [], right = [];
+
+  for (var i = 0; i < len - 1; i++) { // 经过splice操作，原数组长度减1
+    // 与中间值比较，组合左右数组
+    if (arr[i] < middleValue) {
+      left.push(arr[i]);
+    } else {
+      right.push(arr[i]);
+    }
+  }
+
+  // 左右数组递归，拼接
+  return quickSort(left).concat(middleValue, quickSort(right));
+}
+```
+
+测试：
+
+在添加生成随机数组方法，传两个参数，数组中包含的元素个数`n`以及每个元素的最大值（最小值默认为`0`）
+
+```js
+var randomArr = function (n, max) {
+  if (!max) {
+    max = 100;
+  }
+
+  var arr = [];
+  for (var i = 0; i < n; i++) {
+    arr.push(parseInt(Math.random() * max))
+  }
+
+  return arr;
+}
+```
+
+```js
+quickSort(randomArr(1000, 1000));
+```
+
+当有100000个数组的时候，快排和冒泡排序的差距就非常明显了。
