计算js某段代码运行时间

--- a/JavaScript/method/数组排序.md
+++ b/JavaScript/method/数组排序.md
@@ -141,7 +141,7 @@ function quickSort (arr) {
 **正确**
 
 ```js
-// 错误的快排
+// 正确的快排
 function quickSort (arr) {
   // 设置递归函数结束条件：数组长度为1，结束递归
   var len = arr.length;
