--- a/JavaScript/concept/闭包.md
+++ b/JavaScript/concept/闭包.md
@@ -1,1 +1,46 @@
-写出一个闭包：
+闭包的一个作用是可以访问某个函数内部变量（局部变量），继而达到延长作用域链的作用。
+
+- 没有闭包的情况：
+
+```js
+// 没有闭包的情况，无法访问函数foo内部变量a
+function foo() {
+  let a = 1;
+}
+
+console.log(a); // undefined
+```
+
+- 有闭包的情况   
+
+1，错误的示例   
+
+```js
+// 有闭包的情况，可以访问foo的内部变量a
+function foo() {
+  let a = 1;
+  return function () {
+    return a;
+  }
+}
+
+console.log(foo()); // 直接返回function () {return a;}, 并没有返回a的值
+```
+
+2，正确的示例
+
+```js
+function foo() {
+  let a = 1;
+  return function () {
+    return a;
+  }
+}
+
+let bar = foo();
+console.log(bar()); // 返回foo的内部变量a的值：1
+```
+
+正常情况下，变量a作为函数foo的局部变量，是不能在foo外部访问的，但由于闭包的存在，可以访问了。
+
+（详细机制还要再深究2017-08-31）
