es6中的let关键词没有变量提升

--- a/JavaScript/method/变量函数提升.md
+++ b/JavaScript/method/变量函数提升.md
@@ -40,3 +40,20 @@ a();
 位置6：混淆试听的；
 
 位置7：结果为报错，提示 `a` 不是函数，同样因为位置3的操作。
+
+**不过，ES6一出，上面的代码意义不大了，如果用let声明，是不允许有重复声明的，直接报错。** 见下面的例子：
+
+```js
+console.log(a);
+
+a();
+
+// 3
+let a = 3;
+
+function a () {
+  console.log(111);
+}
+```
+
+上面代码直接报错，因为JS引擎在编译阶段就发现了错误：位置3重复声明一个已经存在的变量 `a`，用 `let` 关键字是不允许的。 **编译阶段检查出错误，直接不给机会进入到执行阶段**
