using spread operator and set eliminating duplicates in array

--- a/JavaScript/method/数组去重.md
+++ b/JavaScript/method/数组去重.md
@@ -6,7 +6,7 @@
 [...new Set([1,2,3,1,'a',1,'a'])]
 ```
 
-解释：看完 ES6 `set` 相关再回来答。。。
+解释：作为ES6引入的新的集合类型，set 天生的里面没有重复元素，同时，又可以接收可迭代对象作为参数，返回一个新的 set 对象如果其中有重复元素，会自动去重（通过`Object.is()`方法判断是否相同）。然后通过 [spread operator](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Spread_operator) 将其展开为数组，从而实现去重的目的。
 
 - ES5
 
