分析词法作用域（静态作用域）

--- a/JavaScript/method/理解词法作用域.md
+++ b/JavaScript/method/理解词法作用域.md
@@ -28,23 +28,17 @@ function bar() {
 bar();
 ```
 
-code1输出是2，code2输出3 why？。首先，上面的代码调换下顺序：
+code1输出是2，code2输出3。
 
-```js
-var a;
+分析：   
 
-function foo() {
-  console.log(a); // 会输出2还是3？
-}
+关于词法作用域和静态作用域，经典总结：  
 
-function bar() {
-  var a = 3;
-  foo();
-}
+- 词法作用域的函数中遇到既不是形参也不是函数内部定义的局部变量的变量时，去函数定义时的环境中查询。
+- 动态域的函数中遇到既不是形参也不是函数内部定义的局部变量的变量时，到函数调用时的环境中查。
 
-a = 2;
+js的作用域是基于静态作用域的。   
 
-bar();
-```
+code1中调用 `foo` 时，因为 `console.log(a)` 中的 `a` 即不是函数 `foo` 的形参，也不是在 `foo` 中定义的局部变量，这时，便去 `foo` 被定义的环境中查询，因为 `foo` 此时是在全局环境中定义的，所以找到了全局变量 `a` ，且其值为 `2`。   
 
-待填坑。
+code2中调用的 `foo` 是在函数 `bar` 中定义的，所以找到了在函数 `bar` 中定义的局部变量 `a`，其值为 `3`。
