--- a/JavaScript/concept/对象的访问器属性和数据属性.md
+++ b/JavaScript/concept/对象的访问器属性和数据属性.md
@@ -35,7 +35,7 @@ Object.defineProperty(book, 'year', {
 
 // 写入访问器属性，调用 setter 函数
 book.year = 2017;
-console.log(this.edition); // 2
+console.log(book.edition); // 2
 ```
 
 > `_` 加在对象属性前表示只能通过对象方法进行访问。（硬要访问肯能也能如同普通属性一样访问，比如 `book._year`, 这里只是写成人看的，一种提示信息，便于阅读。）
