vue-router get url pathname

--- a/other/Vue/路由传参（登录后跳回原页面）.md
+++ b/other/Vue/路由传参（登录后跳回原页面）.md
@@ -26,3 +26,5 @@ const urlQueryObj = this.$route.query；
 
 console.log(urlQueryObj.plan); // private
 ```
+
+> 可以通过 `this.$route.path` 获取 url pathname
