词法作用域和闭包

--- a/JavaScript/method/理解词法作用域.md
+++ b/JavaScript/method/理解词法作用域.md
@@ -34,7 +34,7 @@ code1输出是2，code2输出3。
 
 关于词法作用域和静态作用域，经典总结：  
 
-- 词法作用域的函数中遇到既不是形参也不是函数内部定义的局部变量的变量时，去函数定义时的环境中查询。
+- 词法作用域的函数中遇到既不是形参也不是函数内部定义的局部变量的变量时，去函数定义时的环境中（它的词法作用域）查询。
 - 动态域的函数中遇到既不是形参也不是函数内部定义的局部变量的变量时，到函数调用时的环境中查。
 
 js的作用域是基于静态作用域的。   
@@ -42,3 +42,5 @@ js的作用域是基于静态作用域的。
 code1中调用 `foo` 时，因为 `console.log(a)` 中的 `a` 即不是函数 `foo` 的形参，也不是在 `foo` 中定义的局部变量，这时，便去 `foo` 被定义的环境中查询，因为 `foo` 此时是在全局环境中定义的，所以找到了全局变量 `a` ，且其值为 `2`。   
 
 code2中调用的 `foo` 是在函数 `bar` 中定义的，所以找到了在函数 `bar` 中定义的局部变量 `a`，其值为 `3`。
+
+> 词法作用域进一步引申出闭包。实际上，不管code1还是code2中 foo 都起了闭包的作用：保持了对其词法作用域的引用。
