词法作用域和闭包

--- a/JavaScript/method/理解词法作用域.md
+++ b/JavaScript/method/理解词法作用域.md
@@ -34,7 +34,7 @@ code1输出是2，code2输出3。
 
 关于词法作用域和静态作用域，经典总结：  
 
-- 词法作用域的函数中遇到既不是形参也不是函数内部定义的局部变量的变量时，去函数定义时的环境中（它的词法作用域）查询。
+- 词法作用域的函数中遇到既不是形参也不是函数内部定义的局部变量的变量时，去函数定义时的环境中（它的词法作用域）查询。(这也是闭包工作的原理)
 - 动态域的函数中遇到既不是形参也不是函数内部定义的局部变量的变量时，到函数调用时的环境中查。
 
 js的作用域是基于静态作用域的。   
