兼容性综述补充

--- a/other/兼容性/综述.md
+++ b/other/兼容性/综述.md
@@ -3,3 +3,13 @@
 css兼容性通过Postcss可以很好的解决，但JS新增方法的兼容性，通过Babel不能很全面的覆盖，Babel可能适用向 `promise` 这类大的改动的转化，细节有疏漏，这样debug很要命。   
 
 所以以后遇到兼容问题，优先检查是否是JS方法适用不当。   
+
+出了JS新语法，还有就是 IOS 10 以下自带的 Safari 对于flex支持不是很好，并非完全不支持，只是不支持 `justify-content` 这个属性。   
+
+所以兼容性注意以下几点：   
+
+1. 是否js新API不支持；  
+2. 是否是CSS新属性不支持；
+
+关于产生兼容性的原因，出了令人诟病的 IE ，还可能是系统因素，比如 IOS 8 中自带的 safari 就对 flex 布局支持不好。   
+
