vue组件中不能直接更改prop属性

--- a/other/Vue/写组件时踩的坑.md
+++ b/other/Vue/写组件时踩的坑.md
@@ -5,3 +5,37 @@
 和这个错误一起的还有另一个报错 `Module not found: Error: Can't resolve '../../components/TopBar'`，**这个错误说明不是没有找到文件，而是不能解析**，加上后缀名 `.vue` 解决。   
 
 > 如果后缀名是 `.js` 可以不写后缀名，非 js 文件也可以通过 webpack 配置？
+
+## 组件内不能直接更改在 `prop` 中定义的属性
+
+像下面这样在组件中直接更改 `prop` 中的属性会报错：   
+
+```js
+Vue.component('task', {
+    template: '#task-template',
+    props: ['list'],
+    created () {
+        this.list = JSON.parse(this.list);
+    }
+});
+```
+
+这里的 `list` 是从父组件传递过来的，同时在 `create` 函数中直接更改其值，这在 Vue 中是不推荐的做法，报下面的错误   
+
+`Avoid mutating a prop directly since the value will be overwritten whenever the parent component re-renders. Instead, use a data or computed property based on the prop's value. Prop being mutated: "list"`
+
+做法在提示中也说到了：What you should do now, in case you want to **mutate a prop locally** is to declare a field in your data that uses the props value as **initial value** and then mutate the copy:   
+
+```js
+Vue.component('task', {
+    template: '#task-template',
+    props: ['list'],
+    data: function () {
+      return {
+          mutableList = JSON.parse(this.list);
+      }
+    }
+});
+```
+
+PS: note that according to this [post](https://forum.vuejs.org/t/questions-regarding-handling-immutable-props-and-mutable-data-props/967/2?u=iraklisg), you should not try and use the same name for your prop and data (i.e `data: function () { return { list = JSON.parse(this.list); }`)
