--- a/JavaScript/canvas/1.Canvas里的坐标系统.md
+++ b/JavaScript/canvas/1.Canvas里的坐标系统.md
@@ -5,4 +5,6 @@
 重点明白其方向性：对于 x 轴，和笛卡尔坐标系相同，左负右正；但对于 y 轴要注意，是**上负下正**。
 > 主要为了使可见画布中的坐标都是正数。
 
+ps:对于web页面而言，也是左上角为原点。
+
 参考：[Canvas学习：Canvas里的坐标系统](https://www.w3cplus.com/canvas/canvas-coordinate-system.html)
