--- a/other/react_native/2.更改 IOS 默认模拟器.md
+++ b/other/react_native/2.更改 IOS 默认模拟器.md
@@ -6,4 +6,6 @@
 
 查看iOS设备：在终端中输入 `xcrun simctl list devices`
 
-若已经打开了一个模拟器，需要先关闭这个模拟器，再执行 `react-native run-ios` 命令打开的就是新的模拟器
+若已经打开了一个模拟器，需要先关闭这个模拟器，再执行 `react-native run-ios` 命令打开的就是新的模拟器   
+
+参考资料：[React Native指定设备运行](http://blog.csdn.net/u010359739/article/details/71221309)
