--- a/other/react_native/3.通过模拟器的 get_start.md
+++ b/other/react_native/3.通过模拟器的 get_start.md
@@ -1,12 +1,22 @@
+## 通过 `react-native run-ios`   
+
+这种方式会调用 xcode iphone 模拟器，但不需要打开 xcode，推荐。   
+
 通过官方教程 [Building Projects with Native Code](https://facebook.github.io/react-native/docs/getting-started.html)，很顺利的完成了模拟器启动。   
 
-需要说明的是，输入 `react-native run-ios` 后构建了好长时间，终端也是不断刷屏，并且最后的实时日志也是用 mac 自带终端打开的。  
+需要说明的是，输入 `react-native run-ios` 后构建了好长时间，终端也是不断刷屏，并且最后的实时日志也是用 mac 自带终端打开的。
+> 首次构建需要时间长，第二次构建就会很多。   
+ 
 另外，运行构建的过程总会打开模拟器，但此时还没有构建完成。   
 
-构建的后面阶段会打开 mac 自带终端，开启实时日志，同事，模拟器运行构建的应用。构建成功后，模拟器自动打开构建的应用。   
+构建的后面阶段会打开 mac 自带终端，开启实时日志，同时，模拟器运行构建的应用。构建成功后，模拟器自动打开构建的应用。   
 
 可以通过 `cmd + r` 实时刷新，或者通过 `cmd + d` 各种调试。  
 
 问题：如何直接在 zsh 中打开实时日志？
 
 感想：react native 感觉比 ionic 专业好多，最起码字号是和原生 APP 一样，而非浏览器标准字号（就是相同字号，APP中更小）  
+
+## 通过 xcode   
+
+如果不通过命令行工具启动模拟器，也可以使用 xcode 直接启动模拟器，但要注意，需要打开的是 Awesomproject 下面的 ios 文件夹，直接用 xcode 打开 Awesomproject 文件夹时报错，不清楚具体原因，可能是有些文件不能正确解析？   
