构造函数，原型对象，重写原型对象，instanceof 原理

--- a/JavaScript/concept/构造函数和原型对象.md
+++ b/JavaScript/concept/构造函数和原型对象.md
@@ -1,9 +1,26 @@
-任何函数都有一个`prototype`属性，该属性值是一个对象。   
+1. 任何函数都有一个`prototype`属性，该属性指向该函数的原型对象。   
 
-原型对象又都有一个`constructor`属性，该属性值指向拥有它的函数。   
+2. 原型对象又都有一个`constructor`属性，该属性值为指向该原型对象的`prototype`所属函数（一般就是构造函数了）。 
 
-如果函数作为原型函数调用（前面加`new`操作符），那么其原型对象会被实例共享。   
+> 这个默认指向在原型对象重写后会改变，除非显式的指定，见下面的代码
+```js
+function Person() {}
 
-任何实例都有一个`[[Prototype]]`（注意首字母大写）内部属性，该属性值是一个引用，指向其构造函数的原型对象。   
+// 用字面量形式重写 prototype 以后，prototype 的 constructor 属性指向已经改变了
+Person.prototype = {
+  name: 'xiaog',
+  sayName: function() {
+    console.log(this.name);
+  },
+}
 
-构造函数和原型对象之间没有直接联系，是通过构造函数的原型对象联系在一起的。
+let p = new Person();
+
+console.log(p.constructor == Person); // false
+console.log(p.constructor == Object); // true
+```
+3. 如果函数作为原型函数调用（前面加`new`操作符），那么其原型对象会被实例共享。   
+
+4. 任何实例都有一个`[[Prototype]]`（注意首字母大写）内部属性，该属性值是一个引用，指向其构造函数的原型对象。   
+
+5. 构造函数和原型对象之间没有直接联系，是通过构造函数的原型对象联系在一起的。
