构造函数，原型对象

--- a/JavaScript/concept/构造函数和原型对象.md
+++ b/JavaScript/concept/构造函数和原型对象.md
@@ -23,4 +23,10 @@ console.log(p.constructor == Object); // true
 
 4. 任何实例都有一个`[[Prototype]]`（注意首字母大写）内部属性，该属性值是一个引用，指向其构造函数的原型对象。   
 
-5. 构造函数和原型对象之间没有直接联系，是通过构造函数的原型对象联系在一起的。
+5. 构造函数和原型对象之间没有直接联系，是通过构造函数的原型对象联系在一起的。   
+
+## 总结
+
+- 简单说构造函数、原型和实例之间的关系：每个构造函数都有一个原型对象，原型对象都包含一个指向构造函数的指针，而每个实例都有一个指向原型对象的内部指针。
+
+- 当通过构造函数创建一个实例时，一定有这种意识：实例即创建了自己的实例属性（构造函数中定义的），同时又有原型方法（和原型属性）。这个思想在继承的时候尤其重要。
