vscode 自定格式化 jsx

--- a/other/react/react_native/5.react_native目录结构.md
+++ b/other/react/react_native/5.react_native目录结构.md
@@ -50,6 +50,7 @@
 |  |   |--screens
 |  |   |--store
 |  |--index.js
+|  |--app.js
 ``` 
 
 目录结构解释如下：   
@@ -64,6 +65,7 @@
 - `src/screens`：APP 的页面
 - `src/store`：如果引入状态管理，放这里
 - `index.js`：入口文件   
+- `app.js`：项目主文件？   
 
 > react 0.49 以后 ios 和 android 共用一个 `index.js` 入口文件，不再区分 `index.ios.js` 和 `index.android.js`，参考 [How to use index.js instead of (index.ios.js, index.android.js) in React Native for cross-platform app?](https://stackoverflow.com/questions/44803681/how-to-use-index-js-instead-of-index-ios-js-index-android-js-in-react-native)    
 
