android studio 设置代理

--- a/other/react/react_native/4.mac 下安装 android studio 问题汇总.md
+++ b/other/react/react_native/4.mac 下安装 android studio 问题汇总.md
@@ -1,6 +1,6 @@
 ## Unable to access Android SDK add on list
 
-原因：初始化安装不使用代理报这个错误。因为我使用了 VPN，改为默认后依然报这个错误，但是选择取消却能正常下载，很奇怪。
+最简单方法是设置代理：我用的多态，通过 shadowsocks 的高级设置，找到 Local Sock5 监听地址及端口，填入 android studio 手动 sock 代理（应该是我的代理不稳定，第一次使用的时候下载极慢，第二次重新下载速度就和带宽相近了）。   
 
 > 注意，这个有个坑，当 downloading components 的时候并不是显示进度条，而是同一个链接不断刷新，这有点不人性。可以通过 acitvity monitor 查看 android studio 使用多少流量定性判断下下载进度。
 
