mac下安装as问题汇总

--- a/other/react/react_native/4.mac 下安装 android studio 问题汇总.md
+++ b/other/react/react_native/4.mac 下安装 android studio 问题汇总.md
@@ -44,3 +44,29 @@ rm -Rf ~/Library/Android*
 ```bash
 rm -Rf ~/.gradle
 ```
+
+## 初始化项目遇到的问题
+
+1. gradle resolve dependencies 'app _debugcompile'卡住
+
+在 setting 里面设置 HTTP Proxy（国内开发要有稳定的代理）
+
+2. gradle resolving dependencies ' classpath'卡住
+
+查看安卓项目目录下的 `gradle.properties` 文件，确保设置好了 http 和 https 的代理（一般是相同的 host 和 port）：  
+
+```
+systemProp.http.proxyHost=127.0.0.1
+systemProp.https.proxyPort=1087
+systemProp.https.proxyHost=127.0.0.1
+android.useDeprecatedNdk=true
+systemProp.http.proxyPort=1087
+```
+
+这个问题出现可能是：a.只设置了 http 没有设置 https 代理；b.代理地址写错（一般代理都会提供 socks 和 http 两种模式的代理，确保端口和地址写对）
+
+> 代理监听的 http 和 host 都是可以自定义的，别傻傻不知道。。。
+
+## 启动虚拟机遇到的问题
+
+1. Emulator: emulator: ERROR: Missing initial data partition file
