react navigation header-top 绝对定位

--- a/other/react/react_native/8.react navigation相关.md
+++ b/other/react/react_native/8.react navigation相关.md
@@ -9,3 +9,18 @@ headerStyle: {
   elevation: 0,
 }
 ```
+
+2. 设置 topbar 为绝对定位，同时背景为透明
+
+```js
+headerStyle: {
+  position: 'absolute',
+  top: 0,
+  left: 0,
+  right: 0,
+  height: 44,
+  backgroundColor: 'transparent',
+}
+```
+
+`right` 属性也要设置，不然都不知道定位定到哪了。
