--- a/other/react/react_native/9.细节整理.md
+++ b/other/react/react_native/9.细节整理.md
@@ -9,3 +9,15 @@
 </TouchableHighlight>
 ```
 
+2. 设置 100% 宽度
+
+```js
+import { Dimensions } from 'react-native';
+
+// ...
+
+<Image
+  source={require('../../assets/img/login_bg.png')}
+  style={{ height: 164, width: Dimensions.get('window').width }}
+/>
+```
