--- a/other/react/react_native/9.细节整理.md
+++ b/other/react/react_native/9.细节整理.md
@@ -21,3 +21,21 @@ import { Dimensions } from 'react-native';
   style={{ height: 164, width: Dimensions.get('window').width }}
 />
 ```
+
+2. 属性如果是 boolean
+
+如果 boolean 值为 `true`，直接写属性名就好，不需要在写属性值，如果 `false` 则写，比如： 
+
+```js
+<TextInput autoFocus />
+```
+
+此处 `autoFocus` 的值为 `true`
+
+3. 属性值除了字符串意外，其他都以表达式（放在 `{}`中）形式出现，尤其注意传递 nubmer 时
+
+```js
+  <TouchableOpacity activeOpacity={0.4}>
+```
+
+此处 `activeOpacity` 值为 `0.4`
