--- a/other/react/1.react数据传递之概述.md
+++ b/other/react/1.react数据传递之概述.md
@@ -6,4 +6,7 @@
 
 Angular 设计之初的一大亮点就是可以实现了数据的双向绑定，使用 Vue 一段时间后发现，所谓数据的双向绑定，组件内部唯一的应用场景就是 form 表单（input，textarea，select， radio）等，而这种场景下的数据双向绑定，即便框架内部没有实现，自己实现起来也非常简单。在没有使用 React 之前，感觉 React 没有实现数据双向绑定很 low，现在却不以为然。   
 
-对于 React 的数据传递，涉及两方面的内容：组件内部的数据传递、组件间的数据传递。 其中，组件间的数据传递包括父组件往子组件传递数据、子组件往父组件传递数据、兄弟组件之间传递数据。   
+对于 React 的数据传递，涉及两方面的内容：   
+
+1. 组件内部的数据传递，典型的应用场景包括如何实现 form 表单双向数据绑定、如何绑定事件；
+2. 组件间的数据传递。 包括父组件往子组件传递数据、子组件往父组件传递数据以及兄弟组件之间传递数据。   
