react-native 目录结构及 redux 初学时的状态

--- a/other/react/react_native/5.react_native目录结构.md
+++ b/other/react/react_native/5.react_native目录结构.md
@@ -12,43 +12,7 @@
 |  |   |--config
 |  |   |--lib
 |  |   |--screens
-|  |   |--store
-|  |--index.js
-``` 
-
-目录结构解释如下：   
-
-- `android`：安卓原生代码
-- `build`：安卓/ios 构建后代码
-- `ios`：ios 原生代码
-- `src/assets`：图片，样式等静态资源
-- `src/components`：公用组件，比如 button，select 等
-- `src/config`：配置文件，比如 路由、API等
-- `src/lib`：工具函数或者第三方库
-- `src/screens`：APP 的页面
-- `src/store`：如果引入状态管理，放这里
-- `index.js`：入口文件   
-
-> react 0.49 以后 ios 和 android 共用一个 `index.js` 入口文件，不再区分 `index.ios.js` 和 `index.android.js`，参考 [How to use index.js instead of (index.ios.js, index.android.js) in React Native for cross-platform app?](https://stackoverflow.com/questions/44803681/how-to-use-index-js-instead-of-index-ios-js-index-android-js-in-react-native)    
-
-## 参考资料
-1. [ignite/docs/quick-start/project-structure.md](https://github.com/infinitered/ignite/blob/master/docs/quick-start/project-structure.md)   
-2. [react-native_The folder structure](https://www.packtpub.com/mapt/book/application_development/9781787282537/2/02lvl1sec18/the-folder-structure)   
-3. [React native project setup — a better folder structure](https://hackernoon.com/manage-react-native-project-folder-structure-and-simplify-the-code-c98da77ef792)   ## 目录结构概览
-
-```bash
-|--root
-|  |--android 
-|  |--build
-|  |--ios
-|  |--node_modules
-|  |--src
-|  |   |--assets
-|  |   |--components
-|  |   |--config
-|  |   |--lib
-|  |   |--screens
-|  |   |--store
+|  |   |--redux
 |  |--index.js
 |  |--app.js
 ``` 
@@ -63,9 +27,11 @@
 - `src/config`：配置文件，比如 路由、API等
 - `src/lib`：工具函数或者第三方库
 - `src/screens`：APP 的页面
-- `src/store`：如果引入状态管理，放这里
+- `src/redux`：如果引入状态管理，放这里（直接写明状态管理的库名）
 - `index.js`：入口文件   
 - `app.js`：项目主文件？   
+
+**NOTE：如果引入 redux，目录结构还可以调整，具体可参考这个讨论 [Redux FAQ: Code Structure](https://redux.js.org/docs/faq/CodeStructure.html)**（现在自己对 redux 也不是很熟，所以还提不出有建设性的意见，等做多几个项目再来填坑）
 
 > react 0.49 以后 ios 和 android 共用一个 `index.js` 入口文件，不再区分 `index.ios.js` 和 `index.android.js`，参考 [How to use index.js instead of (index.ios.js, index.android.js) in React Native for cross-platform app?](https://stackoverflow.com/questions/44803681/how-to-use-index-js-instead-of-index-ios-js-index-android-js-in-react-native)    
 
