调用redux action 时传递参数

--- a/other/react/react_native/16.[总结]redux在react_native中的使用.md
+++ b/other/react/react_native/16.[总结]redux在react_native中的使用.md
@@ -85,3 +85,49 @@ export default connect(mapStateToProps, mapDispatchToProps)(ScreenLogin);
 ```
 
 完整 app 做完榄盛金融 app 再填坑。   
+
+## 调用 action 时传递参数
+
+- actions 设置
+
+```js
+// 无参数 action
+export function addOne() {
+  return {
+    type: 'ADD_ONE',
+  };
+}
+
+// 有参数 action
+export function setUserInfo(userInfo) {
+  return {
+    type: 'SET_USER_INFO',
+    userInfo,
+  };
+}
+```
+
+- reducer 设置
+
+```js
+function reducer(state = initialState, action) {
+  console.log('action type: ', action.type);
+  switch (action.type) {
+    case 'ADD_ONE':
+      return { defaultNum: state.defaultNum - 1 };
+
+    // 获取 action 传递过来的参数
+    case 'SET_USER_INFO':
+      return { userInfo: action.userInfo };
+    default:
+      return state;
+  }
+}
+```
+
+- 组件中使用
+
+```js
+// 这里的 res 是对象
+this.props.setUserInfo(res);
+```
