--- a/other/react/react_native/16.[总结]redux在react_native中的使用.md
+++ b/other/react/react_native/16.[总结]redux在react_native中的使用.md
@@ -21,7 +21,13 @@ ps：整个应用（的 View）都包裹在 Redux 提供的 `Provider` 组件中
 1. store 中的状态如何在所有组件中共享？
 2. 组件如何通过触发 action 改变 store 中的状态？  
 
-实际上，**store 中除了包含状态，也包含了 actions 中定义的方法**，所以问题就变成了 **如何在所有组件中访问 store**。为了解决这个问题，Redux 引入了 `connect` 方法和 `Provide` 组件。    
+实际上，**store 中除了包含状态，也包含了 actions 中定义的方法**，所以问题就变成了 **如何在所有组件中访问 store**。为了解决这个问题，Redux 引入了 `connect` 方法和 `Provide` 组件。   
+
+> store 是应用状态 state 的管理者，包含下列四个函数：   
+> - getState() # 获取整个 state   
+> - dispatch(action) # ※ 触发 state 改变的【唯一途径】※   
+> - subscribe(listener) # 您可以理解成是 DOM 中的 addEventListener   
+> - replaceReducer(nextReducer) # 一般在 Webpack Code-Splitting 按需加载的时候用       
 
 通过这一对基友实现 store 在组件间共享的思想是：
 
