createStore 时初始化 state 出错

--- a/other/react/react_native/18.引入redux store 持久化存储的坑.md
+++ b/other/react/react_native/18.引入redux store 持久化存储的坑.md
@@ -9,3 +9,11 @@ import { configureStore } from './src/redux/store';
 // 错误
 import configureStore from './src/redux/store';
 ```
+
+2. Reducer "reducer" returned undefined during initialization. redux-persist
+
+在 store.js `createStore` 中初始化状态报错。不知道为什么，改到 reducer.js 中初始化数据。。。
+
+参考下这个讨论: [Why do I get “Reducer […] returned undefined during initialization” despite providing initialState to createStore()?](https://stackoverflow.com/questions/36619093/why-do-i-get-reducer-returned-undefined-during-initialization-despite-pr/36620420)   
+
+> 现在自己没有明白 redux 原理，好多都是东拼西凑代码。   
