在 store 中初始化 state

--- a/other/react/react_native/16.[总结]redux在react_native中的使用.md
+++ b/other/react/react_native/16.[总结]redux在react_native中的使用.md
@@ -113,9 +113,26 @@ export function setUserInfo(userInfo) {
 }
 ```
 
+- store 设置
+
+```js
+import { createStore } from 'redux';
+import reducer from './reducer';
+
+export const initialState = {
+  defaultNum: 0,
+};
+
+const store = createStore(reducer, initialState);
+
+export default store;
+```
+
 - reducer 设置
 
 ```js
+import { initialState } from './store';
+
 function reducer(state = initialState, action) {
   console.log('action type: ', action.type);
   switch (action.type) {
