redux state 每次 action 便会丢失一部分的原因

--- a/other/react/react_native/19.初始化的redux store中的state被覆盖了.md
+++ b/other/react/react_native/19.初始化的redux store中的state被覆盖了.md
@@ -21,4 +21,70 @@ state = {
 };
 ```
 
-整个 state 被覆盖了？！
+**整个 state 被覆盖了？！**    
+
+知道为什么了：
+
+## 当 state 变化时需要返回全新的对象，而不是修改传入的参数。   
+
+我之前 reducer 的代码：   
+
+```js
+import { initialState } from './store';
+
+function reducer(state = initialState, action) {
+  console.log('action type: ', action.type);
+  switch (action.type) {
+    case 'ADD_ONE':
+      return { defaultNum: state.defaultNum - 1 };
+
+    // 获取 action 传递过来的参数
+    case 'SET_USER_INFO':
+      return { userInfo: action.userInfo };
+    default:
+      return state;
+  }
+}
+```
+
+之前计数器什么的代码，state 是对象，但只有一个参数 `defaultNum` 这样即便以后重写也没有问题，因为重新后也是 `defaultNum`（代码中 return 的还是 `defaultNum`）。   
+
+但我更改后就不一样了，初始化的 state 是这样的：   
+
+```js
+initialState = {
+  defaultNum: 0,
+  userInfo: {
+    user_id: -1,
+  },
+}
+```
+
+后面每个 action 每次只引起 state 的部分变化，因为 **当 state 变化时需要返回全新的对象** 所以就导致，**state 变成了变化的那部分**！！！！！！！！   
+
+官方文档是这么描述的：   
+
+> The only important part is that you should not mutate the state object, but return a new object if the state changes.    
+
+就是说，在使用的时候不能直接修改 state 对象，而是要返回一个新的对象，这个全新的对象会替代已有的 state 对象（整个覆盖就不是修改了？）。   
+
+业务上往往需要继承这个对象的已有内容，这个时候可以使用 `Object.assign()` 方法，修改后的 reducer 如下：   
+
+```js
+function reducer(state = initialState, action) {
+  switch (action.type) {
+    case 'ADD_ONE':
+      return Object.assign({}, state, { defaultNum: state.defaultNum + 1 });
+    case 'DECREASE_ONE':
+      return Object.assign({}, state, { defaultNum: state.defaultNum - 1 });
+    case 'SET_USER_INFO':
+      return Object.assign({}, state, { userInfo: action.userInfo });
+    default:
+      return state;
+  }
+}
+```
+
+还是看[官方文档](http://cn.redux.js.org/)（[英文在这里](https://redux.js.org/)）搞定的，需要通读一遍，不然真是摸瞎了。   
+
+其他参考资料：[Redux 入门教程（一）：基本用法](http://www.ruanyifeng.com/blog/2016/09/redux_tutorial_part_one_basic_usages.html)   
