react-native 安卓标题居中显示

--- a/other/react/react_native/23.Center title on Android in a StackNavigator.md
+++ b/other/react/react_native/23.Center title on Android in a StackNavigator.md
@@ -4,3 +4,10 @@ headerTitleStyle: {
   alignSelf: 'center',
 },
 ```
+
+NOTE：很多标题栏都有 `headerLeft` ，比如返回按钮，如果右边没有元素，整个 title 会偏右，这时将 `headerRight` 设置为空元素就 ok：   
+
+```js
+// 如果有 headerLeft 占位用，保证安卓上标题居中显示
+headerRight: <View />,
+```
