react native stackNavigator传参

--- a/other/react/react_native/20.Updating an object with setState in React.md
+++ b/other/react/react_native/20.Updating an object with setState in React.md
@@ -29,10 +29,8 @@ First create a copy of jasper then do the changes in that:
 let jasper = Object.assign({}, this.state.jasper);    //creating copy of object
 jasper.name = 'someothername';                        //updating value
 this.setState({jasper});
-Instead of using Object.assign we can also write it like this:
-
+// Instead of using Object.assign we can also write it like this:
 let jasper = {...this.state.jasper};
-
 ```   
 
 2- Using spread operator:
