--- a/other/react/react_native/0.规范.md
+++ b/other/react/react_native/0.规范.md
@@ -1,4 +1,41 @@
 1. 组件用大驼峰命名法（首字母大写），自定义组件还是用小驼峰命名法就好。   
 官方解释：    
 > Always start component names with a capital letter.   
-> React treats components starting with lowercase letters as DOM tags. For example, <div /> represents an HTML div tag, but <Welcome /> represents a component and requires Welcome to be in scope.
+> React treats components starting with lowercase letters as DOM tags. For example, <div /> represents an HTML div tag, but <Welcome /> represents a component and requires Welcome to be in scope.   
+
+2. 组件内通信（props 和 state）
+
+组件内部信息传递统一放在 `state` 中管理，只有从父组件传过来的信息可以可 `state` 同级。   
+
+- good
+
+```js
+constructor(props) {
+  super(props);
+
+  // 父组件传过来的数据
+  this.navigation = props.navigation;
+
+  this.state = {
+    // 组件内部数据
+    inputBankCardNumbText: '',
+  };
+}
+```
+
+- bad
+
+```js
+constructor(props) {
+  super(props);
+  this.navigation = props.navigation;
+
+  // 组件内部数据应该放到 state 中
+  this.inputBankCardNumbText1 = '',
+
+  this.state = {
+    // 组件内部数据
+    inputBankCardNumbText: '',
+  };
+}
+```
