--- a/other/react/react_native/0.规范.md
+++ b/other/react/react_native/0.规范.md
@@ -7,6 +7,8 @@
 
 组件内部信息传递统一放在 `state` 中管理，只有从父组件传过来的信息可以可 `state` 同级。   
 
+> 原因，state 中的数据改变，render 函数会重新渲染，而 state 之外的数据变化 render 函数检测不到（这么说来，react 就不需要 watch 了，刚接触时还一直找 watch 函数）。
+
 - good
 
 ```js
