补充通过 AI 玩微信跳一跳

--- a/python/2.通过AI玩微信跳一跳游戏环境配置.md
+++ b/python/2.通过AI玩微信跳一跳游戏环境配置.md
@@ -15,9 +15,9 @@ python, opencv3, tensorflow
 推荐通过 brew 安装   
 
 ```bash
-brew tap homebrew/science
+$ brew tap homebrew/science
 
-brew install opencv3
+$ brew install opencv3
 ```
 
 顺利的话，在安装成功 opencv3 的同时，也会把相应的依赖库安装好，包括 python（python3）以及 pip3（通过 brew 安装 python3 自动安装 pip3）。
@@ -33,8 +33,8 @@ NOTE: 使用python3
 1. 安装 pip 和 virtualenv   
 
 ```bash
-sudo easy_install pip
-pip install --upgrade virtualenv
+$ sudo easy_install pip
+$ pip install --upgrade virtualenv
 ```   
 
 > 如果已经安装了 opencv3，此时就不需要安装 pip（pip3） 了，因为已经安装好了   
@@ -42,7 +42,7 @@ pip install --upgrade virtualenv
 2. 创建 virtualenv 环境
 
 ```bash
-virtualenv --system-site-packages -p python3 targetDirectory
+$ virtualenv --system-site-packages -p python3 targetDirectory
 ```  
 
 其中 `targetDirectory` 指运行 virtualenv 的根目录，官方展示默认为 `~/tensorflow`。   
@@ -50,8 +50,8 @@ virtualenv --system-site-packages -p python3 targetDirectory
 3. 激活 virtualenv 环境   
 
 ```bash
-source ~/tensorflow/bin/activate      # If using bash, sh, ksh, or zsh
-source ~/tensorflow/bin/activate.csh  # If using csh or tcsh 
+$ source ~/tensorflow/bin/activate      # If using bash, sh, ksh, or zsh
+$ source ~/tensorflow/bin/activate.csh  # If using csh or tcsh 
 ```
 
 如果成功激活在命令行提示符前面或者上面会看到 `(tensorflow)` 字样，比如：   
@@ -116,5 +116,44 @@ print(sess.run(hello))
 直接将 tensorflow 的目录删掉就好了：   
 
 ```bash
-rm -r ~/tensorflow
+$ rm -r ~/tensorflow
 ```
+
+## 安装 WebDriverAgent  
+
+[WebDriverAgent](https://github.com/facebook/WebDriverAgent) is a [WebDriver server](https://w3c.github.io/webdriver/webdriver-spec.html) implementation for iOS that can be used to remote control iOS devices，可以按照这篇教程 [ATX 文档 - iOS 真机如何安装 WebDriverAgent](https://testerhome.com/topics/7220) 进行安装。   
+
+有几点需要注意：   
+
+1. 如果通过手机的IP和端口还不能访问，此时需要将手机的端口转发到Mac上，利用了 [libimobiledevice](https://github.com/libimobiledevice/libimobiledevice)   
+
+```
+$ brew install libimobiledevice
+$ iproxy 8100 8100
+```
+
+> 注意，测试时先通过访问：http://localhost:8100/status 看是否连接成功，ok 后在进行监控 http://localhost:8100/inspector
+
+2. 安装 `facebook-wda`   
+
+不然运行时提示错误 `ModuleNotFoundError: No module named 'wda'` 证明没有安装 `facebook-wda`，安装后就好：   
+
+```bash
+$ pip3 install --pre facebook-wda
+```
+
+## 开始运行啦
+
+1. download and untar data into any directory, and then modify self.data_dir in those files under cnn_coarse_to_fine/data_provider directory；
+
+2. 此外还要下载 `train_logs_coarse` 和 `train_logs_fine` 放到 `resource` 文件夹下   
+
+3. 链接好 WebDriverAgent，进入微信跳一跳游戏开始界面，执行下面命令：   
+
+```bash
+(tensorflow)$ python3 nn_play.py --phone IOS --sensitivity 2.045
+```
+
+> 注意，因为 tensorflow 是安装在 virtualenv，所以要保证先激活 virtualenv
+
+顺利的话就可以看到程序正常跑起来啦！
