浏览器开发者工具查看函数调用栈/this指向

--- a/JavaScript/YDKJS/2.通过浏览器开发者工具查看函数调用栈.md
+++ b/JavaScript/YDKJS/2.通过浏览器开发者工具查看函数调用栈.md
@@ -32,12 +32,14 @@ function bar() {
   console.log('baz', this.a); // 0
 
   foo(); // 这个为什么也是 0，调用位置不是在 bar？
+  
+  // 答：foo() 在这里调用，本质上还是没有任何修饰（隐式/显式/new）的函数调用，this是默认绑定，此处就是window
 }
 
 function foo() {
   var a = 2;
 
-  console.log('foo', this.a);
+  console.log('foo', this.a, a);
 }
 
 bar();
