--- a/other/Git/7.通过gh-pages创建hexo子目录.md
+++ b/other/Git/7.通过gh-pages创建hexo子目录.md
@@ -1,6 +1,6 @@
 # 需求描述
 
-如何使用 Hexo 创建博客可以查看这篇文章 使用 [Hexo + Github 搭建个人博客](http://xiaogliu.github.io/2016/06/09/build-blog-by-hexo-github/) ，创建完成后个人博客地址格式如下：   
+如何使用 Hexo 创建博客可以查看这篇文章 使用 [Hexo + Github 搭建个人博客](https://xiaogliu.github.io/2016/06/09/build-blog-by-hexo-github/) ，创建完成后个人博客地址格式如下：   
 
 ```bash
 username.github.io
