为什么要针对不同platfrom编码

--- a/other/react/react_native/32.判断不同平台platform.md
+++ b/other/react/react_native/32.判断不同平台platform.md
@@ -1,4 +1,6 @@
-有时候需要针对不同平台优化代码，这样首先就要识别不同平台。   
+有时候需要针对不同平台优化代码，比如涉及到 status bar 的时候：安卓 screen 的高度不包括 status bar，而 iOS 包括。
+
+这样首先就要识别不同平台。   
 
 ```js
 import {
