dismiss modal containing a StackNavigator

--- a/other/react/react_native/48.Choose transition mode for each screen in StackNavigator.md
+++ b/other/react/react_native/48.Choose transition mode for each screen in StackNavigator.md
@@ -55,3 +55,29 @@ this.props.navigate('Profile')
 // Navigate with modal transition (just append "Modal" to the end of the route name)
 this.props.navigate('ProfileModal')
 ```
+
+```js
+// 如果在嵌套路由中发现问题，可以使用下面的代码（添加 name 参数），自己使用的时候还有问题，依旧使用的上面代码
+const StackModalNavigator = (name, routeConfigs, navigatorConfig) => {
+  const CardStackNavigator = StackNavigator(routeConfigs, navigatorConfig);
+  const modalRouteConfig = {};
+  const routeNames = Object.keys(routeConfigs);
+
+  for (let i = 0; i < routeNames.length; i++) {
+    modalRouteConfig[`${routeNames[i]}Modal`] = routeConfigs[routeNames[i]];
+  }
+
+  const ModalStackNavigator = StackNavigator(
+    {
+      [name]: { screen: CardStackNavigator },
+      ...modalRouteConfig
+    },
+    {
+      mode: 'modal',
+      headerMode: 'none'
+    }
+  );
+
+  return ModalStackNavigator;
+};
+```
