--- a/other/react/react_native/49.dismiss modal containing a StackNavigator.md
+++ b/other/react/react_native/49.dismiss modal containing a StackNavigator.md
@@ -75,3 +75,5 @@ export default function DismissableStackNavigator(routes, options) {
   }
 };
 ```
+
+from: [How to dismiss modal containing a StackNavigator](https://github.com/react-navigation/react-navigation/issues/686)
