--- a/other/react/react_native/50.react native设置启动页.md
+++ b/other/react/react_native/50.react native设置启动页.md
@@ -78,7 +78,9 @@ NOTE：**如果安装配置完成后出现闪退**，参考下面设置：
 </resources>
 ```
 
-因为 react-native-splash-screen 需要一个名为 `primary_dark` 的颜色值作为状态栏的颜色。
+因为 react-native-splash-screen 需要一个名为 `primary_dark` 的颜色值作为状态栏的颜色。   
+
+可参考这个 issue：[在模拟器安卓4.0上运行正常，在手机上安卓6.0 7.0都闪退 不知道什么情况求解](https://github.com/crazycodeboy/react-native-splash-screen/issues/149)   
 
 
 # 设置启动页内容
@@ -132,7 +134,7 @@ NOTE：**如果安装配置完成后出现闪退**，参考下面设置：
 - drawable-xxhdpi - 960x1600
 - drawable-xxxhdpi - 1280x1920
 
-> 建议直接从 `480x800` 起步防止4张图片就好。   
+> 建议直接从 `480x800` 起步放置4张图片就好。   
 
 3. 优化启动页出现前的短暂白屏
 
