独立 modal 页面补充

--- a/other/react/react_native/48.Choose transition mode for each screen in StackNavigator.md
+++ b/other/react/react_native/48.Choose transition mode for each screen in StackNavigator.md
@@ -1,4 +1,8 @@
+# 解决方案
+
 在 13 中有涉及，因为优先级不高未实践，后实践发现：这个讨论[Choose transition mode for each screen in StackNavigator](https://github.com/react-navigation/react-navigation/issues/707#issuecomment-299859578)中@richardgirges 的方法是 OK 的：
+
+## 更改 StackNavigator
 
 ```js
 const StackModalNavigator = (routeConfigs, navigatorConfig) => {
@@ -46,7 +50,7 @@ const RootNavigator = StackModalNavigator({
 <RootNavigator />
 ```
 
-Usage:   
+## 使用 
 
 ```js
 // Navigate with regular transition
@@ -55,6 +59,20 @@ this.props.navigate('Profile')
 // Navigate with modal transition (just append "Modal" to the end of the route name)
 this.props.navigate('ProfileModal')
 ```
+
+## 取消这个页面
+
+modal 页面的 header 设为 null，所以需要返回（取消）按钮以及如果有需要，还需要写 title 以及其他点击按钮。   
+
+去过取消以 modal 形式进来的页面，支持手势操作：下拉页面就好。但一般需求还会添加取消按钮，通过 `...navigation.goBack()}` 就可以。
+
+## 跳转
+
+这里有个问题，就是如果混用 card 和 modal 模式，如果一个页面是以 modal 的形式进来，如果通过 `...navigation.navigate('SomeScreen')` 跳转页面的形式跳转到下一个页面就悲剧了，**后面的页面都变成了 modal 的交互模式**。    
+
+所以，以 modal 形式进入的页面只能通过 `...navigation.goBack()}` 返回（也就是返回到上一个页面），这样有些局限，暂时只能如此（也有其合理性，以 modal 形式进入的页面本来就不能承载太多功能）。   
+
+# 其他
 
 ```js
 // 如果在嵌套路由中发现问题，可以使用下面的代码（添加 name 参数），自己使用的时候还有问题，依旧使用的上面代码
