ios真机运行上下有黑边

--- a/other/react/react_native/50.react native设置启动页.md
+++ b/other/react/react_native/50.react native设置启动页.md
@@ -96,7 +96,7 @@ NOTE：**如果安装配置完成后出现闪退**，参考下面设置：
 - Default.png (320 x 480)
 - Default@2x.png (640 x 960)
 - Default-568h@2x.png (640 x 1136)
-- Default-667h@2x.png.png (750 x 1334 (iPhone 6, Portrait))
+- Default-667h@2x.png (750 x 1334 (iPhone 6, Portrait))
 - Default-736h@3x.png (1242 x 2208 (iPhone 6 Plus, Portrait))
 - Default-Landscape-568h@2x.png (1136 x 640)
 - Default-Landscape-667h@2x.png (1334 x 750 (iPhone 6, Landscape))
@@ -106,7 +106,7 @@ NOTE：**如果安装配置完成后出现闪退**，参考下面设置：
 - Default-Landscape.png (1024 x 768)
 - Default-Landscape@2x.png (2048 x 1536)
 
-> png 的图片往往比 jpg 尺寸大很多，实际上如果导出的时候为 jpg，然后更改文件后缀为 png，iOS 也可以正常显示。   
+> png 的图片往往比 jpg 尺寸大很多，实际上如果导出的时候为 jpg，然后更改文件后缀为 png，iOS 也可以正常显示。！！！！！！！！！不可以，再模拟器ok，但真机运行出现黑边了！参看 53.   
 
 ## 安卓
 
