--- a/other/react/react_native/52.问题汇总.md
+++ b/other/react/react_native/52.问题汇总.md
@@ -1,3 +1,8 @@
 1. 【ios】 RCTBridge required dispatch_sync to load RCTAppState
 
-这个问题是加完启动页后出现的，但重新构建ok，没有特别调整。
+这个问题是加完启动页后出现的，但重新构建ok，没有特别调整。   
+
+2. [ios] No bundle URL present. 
+Make sure you're running a packager server or have included a .jsbundle file in your application bundle.   
+
+3. [android] Error type 3 Error: Activity class {} does not exist
