--- a/other/react/react_native/52.问题汇总.md
+++ b/other/react/react_native/52.问题汇总.md
@@ -5,4 +5,8 @@
 2. [ios] No bundle URL present. 
 Make sure you're running a packager server or have included a .jsbundle file in your application bundle.   
 
-3. [android] Error type 3 Error: Activity class {} does not exist
+一般是因为同时开启了 ios 和 安卓 remote debug 或者运行在同一个命令行窗口，关掉重新启动；或者手动关闭了terminal，总之连不上调试服务器了，而服务器是通过terminal控制，冲突或者关闭都连不上。       
+
+3. [android] Error type 3 Error: Activity class {} does not exist   
+
+> 上面四个都是环境问题，所以，不要说什么网上有诸多教程，还是要自己总结下。   
