third-party: 'config.h' file not found

--- a/other/react/react_native/52.问题汇总.md
+++ b/other/react/react_native/52.问题汇总.md
@@ -10,3 +10,13 @@ Make sure you're running a packager server or have included a .jsbundle file in 
 3. [android] Error type 3 Error: Activity class {} does not exist   
 
 > 上面四个都是环境问题，所以，不要说什么网上有诸多教程，还是要自己总结下。   
+
+4. [third-party: 'config.h' file not found](https://github.com/facebook/react-native/issues/14382)
+
+@Ignigena 的方法ok：
+
+Running into the same issue here after upgrading from `0.44`. None of the above solutions or clearing caches did the trick for me. Here's what I did to get things working again:
+
+In the Terminal, navigate to the `react-native/third-party/glog` folder inside `node_modules` (for me, this was `cd node_modules/react-native/third-party/glog-0.3.4`)
+Once actively in this folder, run `../../scripts/ios-configure-glog.sh`
+Glog is configured and the required `config.h` header file is created for Xcode to find
