react native 问题整理

--- a/other/react/react_native/43.安卓打包发布问题整理.md
+++ b/other/react/react_native/43.安卓打包发布问题整理.md
@@ -6,6 +6,8 @@
 
 在 40 里面说到如何修改安卓打包后的名称，当时是在安卓应用清单 `AndroidManifest.xml` 中修改，而修改 applicationId， versionCode， versionName 等，则是在 `../android/app/build.gradle` 中修改，比如这样：   
 
+> 两个位置同时修改：`AndroidManifest.xml`，`../android/app/build.gradle`   
+
 ```js
 defaultConfig {
     applicationId "com.your_app_id"
