--- a/other/react/react_native/52.问题汇总.md
+++ b/other/react/react_native/52.问题汇总.md
@@ -20,3 +20,28 @@ Running into the same issue here after upgrading from `0.44`. None of the above 
 In the Terminal, navigate to the `react-native/third-party/glog` folder inside `node_modules` (for me, this was `cd node_modules/react-native/third-party/glog-0.3.4`)
 Once actively in this folder, run `../../scripts/ios-configure-glog.sh`
 Glog is configured and the required `config.h` header file is created for Xcode to find
+
+5. 'React' must be in scope when using JSX (react/react-in-jsx-scope)
+
+一般是忘记引入依赖 `React`：   
+
+```js
+import React from 'react';
+```
+
+6. Component should be written as a pure function (react/prefer-stateless-function)
+
+不知道 app.js 中的 ReduxRoute 哪里不纯？
+
+7. React Native fetch() Network Request Failed
+
+
+The problem here was that iOS does not allow http requests by default, only https. If you want to enable http requests add this to your info.plist:
+
+```html
+<key>NSAppTransportSecurity</key>
+<dict>
+    <key>NSAllowsArbitraryLoads</key>
+    <true/>
+</dict>
+```
